tests/ui/discord-frontend/entity_macro/expected_square_brackets_8.stderr
error: expected square brackets
  --> tests/ui/discord-frontend/entity_macro/expected_square_brackets_8.rs:36:10
   |
LL |     id = core
   |          ^^^^

error: aborting due to 1 previous error

